No_kvm because running on VM
Change-Id: I453f13d4f90f3eb5b3243c3ae0f5f22d8f70c1e5

--- a/lava_setup.yaml
+++ b/lava_setup.yaml
@@ -33,3 +33,5 @@ boards:
     - "set mac_addr = 'DE:AD:BE:EF:66:01'"
     - "set memory = 1024"
     - "set netdevice = 'tap'"
+    - "set no_kvm = 1"
+
